@@ -26,6 +26,10 @@ disable_ssl.label = Disable SSL verify
 disable_ssl.description = Disables SSL verification when crawling web pages
 disable_ssl.tooltip = Disable SSL verify
 
+timeout.label = Timeout
+timeout.description = Connection timeout (seconds)
+timeout.tooltip = Connection timeout (seconds)
+
 max_result_length.label = Max result length
 max_result_length.description = Max length of summarized result (characters)
 max_result_length.tooltip = Max length of summarized result (characters)
