@@ -10,6 +10,10 @@ disable_ssl.label = Wyłącz weryfikację SSL
 disable_ssl.description = Wyłącza weryfikację SSL podczas przeglądania stron internetowych
 disable_ssl.tooltip = Wyłącz weryfikację SSL
 
+timeout.label = Timeout
+timeout.description = Timeout połączenia (sekundy)
+timeout.tooltip = Timeout połączenia (sekundy)
+
 google_api_cx.label = Google Custom Search CX ID
 google_api_cx.description = Swoje CX ID znajdziesz na stronie https://programmablesearchengine.google.com/controlpanel/all\nPamiętaj, aby w ustawieniach projektu włączyć opcję "Szukaj na WSZYSTKICH stronach internetowych".
 google_api_cx.tooltip = Google Custom Search CX ID
